# internal/types/types.go
@@ -4,7 +4,6 @@ import (
 	"github.com/flowline-io/flowbot/pkg/config"
 	jsoniter "github.com/json-iterator/go"
 	"github.com/rs/xid"
-	"net/http"
 	"time"
 )
 
@@ -109,34 +108,6 @@ type SendFunc func(rcptTo string, uid Uid, out MsgPayload, option ...interface{}
 
 func WithContext(ctx Context) Context {
 	return ctx
-}
-
-// ClientComMessage is a wrapper for client messages.
-type ClientComMessage struct {
-	Data LinkData `json:"data"`
-}
-
-// ServerComMessage is a wrapper for server-side messages.
-type ServerComMessage struct {
-	Code    int         `json:"code"`
-	Message string      `json:"message"`
-	Data    interface{} `json:"data"`
-}
-
-// OkMessage success message with data
-func OkMessage(data interface{}) *ServerComMessage {
-	return &ServerComMessage{
-		Code: http.StatusOK,
-		Data: data,
-	}
-}
-
-// ErrMessage error message with code.
-func ErrMessage(code int, message string) *ServerComMessage {
-	return &ServerComMessage{
-		Code:    code,
-		Message: message,
-	}
 }
 
 // TimeNow returns current wall time in UTC rounded to milliseconds.
